fix horizontal scroll on ios

--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,8 @@ h5{
 	grid-row-start: 1;
 	grid-row-end: 3;
 	margin-top: 5rem;
+	max-width: 100% !important;
+    overflow-x: hidden !important;
 }
 .box3{
 	grid-column-start: 3;
